--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  padding: 0;
+}
+
+.wrapper {
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
